# prog-8

./: CMakeLists.txt  main.cpp  для изучения.docx
task1/: CMakeLists.txt  func1.cpp  func1.h  main.cpp
task2/: CMakeLists.txt  func2.cpp  func2.h  main.cpp
task3/: CMakeLists.txt  func3.cpp  func3.h  main.cpp
